Adicionado mais informações na página de investimentos

--- a/Financa.csproj
+++ b/Financa.csproj
@@ -10,6 +10,8 @@
     <Compile Remove="Data\Migrations\20210814183516_03.Designer.cs" />
     <Compile Remove="Data\Migrations\20210814204956_05.cs" />
     <Compile Remove="Data\Migrations\20210814204956_05.Designer.cs" />
+    <Compile Remove="Data\Migrations\20210819054831_vw_Investimentos.cs" />
+    <Compile Remove="Data\Migrations\20210819054831_vw_Investimentos.Designer.cs" />
     <Compile Remove="Models\Market_Time.cs" />
     <Compile Remove="Models\Mercado.cs" />
     <Compile Remove="Models\PETR4.cs" />
